[package]
name = "reliable_broadcast"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
rand = "0.9.2"
serde = "1.0.228"
tokio = "1.48.0"
tower = { version = "0.5.2", features = ["limit"] }
bincode = { version = "2", features = ["serde"] }
sha2 = "0.10.9"
