[package]
name = "reliable_broadcast"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
serde = "1.0.228"
tokio = "1.48.0"
tower = { version = "0.5.2", features = ["limit"] }
bincode = { version = "2", features = ["serde"] }
sha2 = "0.10.9"
futures = "0.3.31"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "digest"] }
rand_core = "0.6.4"
rand = "0.9.2"
serde_bytes = "0.11.19"
thiserror = "2.0.17"
tracing = "0.1.44"

[dev-dependencies]
tracing-subscriber = "0.3"